--- a/manage-travel-offers.css
+++ b/manage-travel-offers.css
@@ -71,7 +71,7 @@ html {
   flex-wrap: wrap;
   gap: 0.5rem;
   width: 100%;
-  margin-top: 1.5rem;
+  padding-bottom: 10px;
 }
 
 /* Offer Card Styling */
