--- a/dashboard.css
+++ b/dashboard.css
@@ -72,7 +72,7 @@ body {
     box-shadow: var(--box-shadow);
     padding: clamp(0.5rem, 1vw, 1rem);
     position: sticky;
-    top: 80px;
+    top: clamp(100px, 6vw, 150px);
     z-index: 99;
 }
 
@@ -453,6 +453,7 @@ body {
     background: white;
     margin: 2rem auto;
     width: 90%;
+    height: fit-content;
     max-width: 600px;
     border-radius: var(--border-radius);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
@@ -494,12 +495,11 @@ body {
 
 .modal-body {
     padding: 1rem;
-    max-height: 70vh;
     overflow-y: auto;
 }
 
 .modal-footer {
-    padding: 1rem;
+    padding: 1rem 0 1rem 1rem;
     border-top: 1px solid #eee;
     display: flex;
     justify-content: flex-end;
@@ -520,7 +520,6 @@ body {
         width: 250px;
         height: 100vh;
         position: fixed;
-        top: 62px;
         right: 0;
         padding: 1rem 0;
     }
