--- a/styles.css
+++ b/styles.css
@@ -2135,15 +2135,13 @@ footer {
     pointer-events: none;
 }
 
-#password-modal {}
-
 #welcome-animation {
     display: none;
     opacity: 0;
     filter: blur(7px);
     transform: translate(-50%, -50%) scale(0.98) translateX(-40px);
     transition: opacity 1.5s, filter 1.5s, transform 1.5s;
-    font-size: 1.3rem;
+    font-size: clamp(0.9rem, 2vw, 1.2rem);
     color: white;
     margin-bottom: 1rem;
     text-align: center;
@@ -2151,7 +2149,7 @@ footer {
     top: 50%;
     left: 50%;
     z-index: 10001;
-    padding: 1.2em 2em;
+    padding: 2px;
     border-radius: 1em;
     box-shadow: 0 2px 16px rgba(0, 0, 0, 0.12);
 }
